[package]
name = "ola-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.7", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower-http = { version = "0.4", features = ["cors"] }